test/log/conversion/vtrunc_w_u16.txt
vtrunc_w_u16.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vtrunc_w_u16.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vtrunc_w_u16.c:30:6: warning: no previous prototype for 'vtrunc_w_u16_golden' [-Wmissing-prototypes]
   30 | void vtrunc_w_u16_golden(uint32_t a[2][16],uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~
vtrunc_w_u16.c: In function 'vtrunc_w_u16_golden':
vtrunc_w_u16.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vtrunc_w_u16.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vtrunc_w_u16.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vtrunc_w_u16.c: In function 'main':
vtrunc_w_u16.c:37:19: warning: declaration of 'a' shadows a parameter [-Wshadow]
   37 |     uint32x16x2_t a;
      |                   ^
vtrunc_w_u16.c:30:35: note: shadowed declaration is here
   30 | void vtrunc_w_u16_golden(uint32_t a[2][16],uint16_t *exp_result) {
      |                          ~~~~~~~~~^~~~~~~~
vtrunc_w_u16.c:41:14: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   41 |     uint16_t exp_result[32] = {0};
      |              ^~~~~~~~~~
vtrunc_w_u16.c:30:54: note: shadowed declaration is here
   30 | void vtrunc_w_u16_golden(uint32_t a[2][16],uint16_t *exp_result) {
      |                                            ~~~~~~~~~~^~~~~~~~~~
vtrunc_w_u16.c: In function 'vtrunc_w_u16_golden':
vtrunc_w_u16.c:69:1: error: expected declaration or statement at end of input
   69 | }
      | ^
vtrunc_w_u16.c:30:35: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vtrunc_w_u16_golden(uint32_t a[2][16],uint16_t *exp_result) {
      |                          ~~~~~~~~~^~~~~~~~
vtrunc_w_u16.c:30:54: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vtrunc_w_u16_golden(uint32_t a[2][16],uint16_t *exp_result) {
      |                                            ~~~~~~~~~~^~~~~~~~~~
At top level:
vtrunc_w_u16.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vtrunc_w_u16.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vtrunc_w_u16"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vtrunc_w_u16.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vtrunc_w_u16.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed